# Docker-Example

./: .gitignore  .markdownlint.yaml  .pre-commit-config-minimal.yaml  .pre-commit-config.yaml  .secrets.baseline  CRITICAL_TOPICS.md  DEVELOPMENT_SETUP.md  LEARNING_OBJECTIVES.md  README.md  TASKLIST.md  TASK_API_SPECIFICATION.md
docker-mastery-multitrack/: FUTURE_ENHANCEMENTS.md  docker-curriculum-guide.md
docker-mastery-multitrack/00-prerequisites/: prerequisites-overview.md  verify-setup.ps1  verify-setup.sh
docker-mastery-multitrack/01-docker-fundamentals/: docker-fundamentals-overview.md
docker-mastery-multitrack/02-language-quickstart/python/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  python-quickstart.md  requirements.txt
docker-mastery-multitrack/02-language-quickstart/python/src/: main.py
docker-mastery-multitrack/02-language-quickstart/rust/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  rust-quickstart.md
docker-mastery-multitrack/02-language-quickstart/rust/src/: main.rs
docker-mastery-multitrack/04-docker-compose/: 01-compose-basics.md  02-compose-networking.md  03-compose-volumes.md  compose-overview.md
docker-mastery-multitrack/05-development-workflow/: 03-ide-integration.md  (+3 more)
examples/: Dockerfile.secure  podman-comparison.md  volume-patterns.yml
java-docker-onboarding/: .gitignore  README.md
scripts/: docker-cleanup-v2.sh  docker-cleanup.ps1  docker-cleanup.sh  example-module-script.sh  run-cleanup.sh  scripts-utilities-guide.md  utils.ps1  utils.sh
(+64 files in other folders)
